--- a/Core/App.xaml
+++ b/Core/App.xaml
@@ -3,7 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Echo"
              DispatcherUnhandledException="Application_DispatcherUnhandledException"
-             Startup="OnStartup">
+             ShutdownMode="OnMainWindowClose"
+             Startup="OnStartup"
+             Exit="OnExit"
+>
     <Application.Resources>
          
     </Application.Resources>
